add branch nav and navigation

--- a/index.html
+++ b/index.html
@@ -13,24 +13,22 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="logo">
-            <a href="index.html" class="logo_link">
-                <img class="logo_img" src="/images/logo-elkasymbek.png" alt="logo" style="width: 100px;">
-            </a>
-             </div>
-        <nav class="header__nav">
+            <nav class="header__nav">
+                <a href="index.html" class="header__logo_link">
+                    <img class="logo_img" src="/images/logo-elkasymbek.png" alt="logo" style="width: 100px;">
+                </a>
             <ul class="header__menu">
-                <li class="header__menu__item"><a href="index.html">Home</a></li>
-                <li class="header__menu__item"><a href="#home">About</a></li>
-                <li class="header__menu__item"><a href="#skills">Skills</a></li>
-                <li class="header__menu__item"><a href="#code">Code</a></li>
-                <li class="header__menu__item"><a href="#portfolio">Portfolio</a></li>
-                <li class="header__menu__item"><a href="#education">Education</a></li>
-                <li class="header__menu__item"><a href="#languages">Languages</a></li>
-                <li class="header__menu__item"><a href="hobbies.html">My hobbies</a></li>
-                <li class="header__menu__item"><a href="contactme.html">Contacts</a></li>
+                <li class="header__menu__item"><a href="index.html" class="header__menu__link">Home</a></li>
+                <li class="header__menu__item"><a href="#home"  class="header__menu__link">About</a></li>
+                <li class="header__menu__item"><a href="#skills"  class="header__menu__link">Skills</a></li>
+                <li class="header__menu__item"><a href="#code"  class="header__menu__link">Code</a></li>
+                <li class="header__menu__item"><a href="#portfolio" class="header__menu__link">Portfolio</a></li>
+                <li class="header__menu__item"><a href="#education" class="header__menu__link">Education</a></li>
+                <li class="header__menu__item"><a href="#languages" class="header__menu__link">Languages</a></li>
+                <li class="header__menu__item"><a href="hobbies.html" class="header__menu__link">My hobbies</a></li>
+                <li class="header__menu__item"><a href="contactme.html" class="header__menu__link">Contacts</a></li>
             </ul>
-        </nav>
+            </nav>
         </div>
     </header>
     <main>
