add styles to style.css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="logo">
+            <div class="header__logo">
             <a href="index.html" class="logo_link">
                 <img class="logo_img" src="/images/logo-elkasymbek.png" alt="logo" style="width: 100px;">
             </a>
