add flex to navigation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <nav class="header__nav">
                 <a href="index.html" class="header__logo_link">
-                    <img class="logo_img" src="/images/logo-elkasymbek.png" alt="logo" style="width: 100px;">
+                    <img class="logo_img" src="/images/logo-elkasymbek.png" alt="logo">
                 </a>
             <ul class="header__menu">
                 <li class="header__menu__item"><a href="index.html" class="header__menu__link">Home</a></li>
